--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cypress": "^1.1.3",
+    "@types/node": "^20.14.9",
     "cypress": "^13.12.0",
     "cypress-iframe": "^1.0.1",
     "typescript": "^5.5.2"
